--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/estilos.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&splay=swap"
+      rel="stylesheet"/>
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <title>Rolling plus</title>
   </head>
@@ -17,9 +15,10 @@
         <h2 class="logotipo">Rolling plus</h2>
         <nav>
           <a href="#" class="activo">Inicio</a>
-          <a href="#">Login</a>
-          <a href="#">Registro</a>
           <a href="#">Nosotros</a>
+          <a href="./pages/contacto.html">Contacto</a>
+          <a href="./pages/login.html">Login</a>
+          <a href="./pages/registrarse.html">Registro</a>
         </nav>
       </div>
     </header>
@@ -44,10 +43,7 @@
       </div>
     </main>
 
-    <script
-      src="https://kit.fontawesome.com/2c36e9b7b1.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
