Algunos arreglos en el diseño

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/estilos.css" />
+
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&splay=swap"
-      rel="stylesheet"/>
+    rel="stylesheet"/>
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
-    <title>Rolling plus</title>
+    <link rel="stylesheet" href="./css/estilos.css" />
+
+    <link rel="shortcut icon" href="./img/loguito.png" type="image/x-icon">
+
+    <title>Rolling plus | Home</title>
   </head>
   <body>
     <header>
@@ -19,6 +23,10 @@
           <a href="./pages/contacto.html">Contacto</a>
           <a href="./pages/login.html">Login</a>
           <a href="./pages/registrarse.html">Registro</a>
+
+          <!-- <button class="btn btn-success btn-md">
+            <a href="./pages/login.html">Cerrar Sesion</a>
+          </button> -->
         </nav>
       </div>
     </header>
@@ -43,7 +51,8 @@
       </div>
     </main>
 
+    <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
