--- a/pages/login.html
+++ b/pages/login.html
@@ -9,6 +9,7 @@
     rel="stylesheet"/>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilosLogin.css">
+    <link rel="shortcut icon" href="./img/loguito.png" type="image/x-icon">
 
     <title>Rolling Plus | Login</title>
 </head>
