--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&splay=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="shortcut icon" href="./img/loguito.png" type="image/x-icon">
+    
     <title>Rolling Plus | Contacto</title>
 </head>
 <body id="contacto">
@@ -17,9 +19,10 @@
             <nav>
                 <a href="../index.html" class="activo">Inicio</a>
                 <a href="#">Nosotros</a>
-                <a href="./pages/contacto.html">Contacto</a>
-                <a href="./pages/login.html">Login</a>
-                <a href="./pages/registrarse.html">Registro</a>
+                <a href="/pages/contacto.html">Contacto</a>
+
+                <a href="/pages/login.html">Login</a>
+                <a href="/pages/registrarse.html">Registro</a>
             </nav>
         </div>
     </header>
