--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&splay=swap"
-    rel="stylesheet"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&splay=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/estilos.css" />
 
-    <link rel="shortcut icon" href="./img/loguito.png" type="image/x-icon">
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
+    <link rel="shortcut icon" href="./img/loguito.png" type="image/x-icon" />
 
     <title>Rolling plus | Home</title>
   </head>
@@ -49,10 +55,189 @@
           </button>
         </div>
       </div>
-    </main>
 
+      <div class="peliculas-recomendadas contenedor">
+        <div class="contenedor-titulo-controles">
+          <h3>Películas recomendadas</h3>
+          <button></button>
+          <button></button>
+        </div>
+        <div class="contenedor-principal">
+          <button role="button" id="flecha-izquierda" class="flecha-izquierda"> <i class="fa-solid fa-angle-left"></i>
+          </button>
+
+ <div class="contenedor-carousel">
+
+  <div class="div-carousel">
+
+    <div class="pelicula">
+      <a href="#"> <img src="./img/recomend1.jpg" alt=""></a>
+    </div>
+    <div class="pelicula">
+      <a href="#"> <img src="./img/recomend2.jpg" alt=""></a>
+    </div> 
+    <div class="pelicula">
+      <a href="#"> <img src="./img/1.png" alt=""></a>
+    </div>
+    <div class="pelicula">
+      <a href="#"> <img src="./img/2.png" alt=""></a>
+    </div>
+    <div class="pelicula">
+      <a href="#"> <img src="./img/3.png" alt=""></a>
+    </div>
+    <div class="pelicula">
+      <a href="#"> <img src="./img/4.png" alt=""></a>
+    </div> 
+    <div class="pelicula">
+      <a href="#"> <img src="./img/5.png" alt=""></a>
+    </div>
+
+
+
+<button role="button" id="flecha-derecha" class="flecha-derecha"><i class="fa-solid fa-angle-right"></i>
+          </button>
+        </div>
+      </div>
+
+
+      <div class="peliculas-recomendadas contenedor">
+        <div class="contenedor-titulo-controles">
+          <h3> Fantasía</h3>
+          <button></button>
+          <button></button>
+        </div>
+        <div class="contenedor-principal">
+          <button role="button" id="flecha-izquierda" class="flecha-izquierda"> <i class="fa-solid fa-angle-left"></i>
+          </button>
+
+ <div class="contenedor-carousel">
+
+  <div class="div-carousel">
+
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div>
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div> 
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div>
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div>
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div>
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div> 
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div>
+
+
+
+<button role="button" id="flecha-derecha" class="flecha-derecha"><i class="fa-solid fa-angle-right"></i>
+          </button>
+        </div>
+      </div>
+      <div class="peliculas-recomendadas contenedor">
+        <div class="contenedor-titulo-controles">
+          <h3> Acción</h3>
+          <button></button>
+          <button></button>
+        </div>
+        <div class="contenedor-principal">
+          <button role="button" id="flecha-izquierda" class="flecha-izquierda"> <i class="fa-solid fa-angle-left"></i>
+          </button>
+
+ <div class="contenedor-carousel">
+
+  <div class="div-carousel">
+
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div>
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div> 
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div>
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div>
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div>
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div> 
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div>
+
+
+
+<button role="button" id="flecha-derecha" class="flecha-derecha"><i class="fa-solid fa-angle-right"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="peliculas-recomendadas contenedor">
+        <div class="contenedor-titulo-controles">
+          <h3>Romance</h3>
+          <button></button> <button></button>
+
+        </div>
+        <div class="contenedor-principal">
+          <button role="button" id="flecha-izquierda" class="flecha-izquierda"> <i class="fa-solid fa-angle-left"></i>
+          </button>
+
+ <div class="contenedor-carousel">
+
+  <div class="div-carousel">
+
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div>
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div> 
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div>
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div>
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div>
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div> 
+    <div class="pelicula">
+      <a href="#"> <img src="" alt=""></a>
+    </div>
+
+
+
+<button role="button" id="flecha-derecha" class="flecha-derecha"><i class="fa-solid fa-angle-right"></i>
+          </button>
+        </div>
+      </div>
+
+
+
+
+
+    </main>
     <script src="./js/bootstrap.bundle.min.js"></script>
-    <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/2c36e9b7b1.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/index.js"></script>
   </body>
 </html>
