--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -9,38 +9,37 @@
     rel="stylesheet"/>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilosLogin.css">
-    <link rel="shortcut icon" href="./img/loguito.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/loguito.png" type="image/x-icon">
 
     <title>Rolling Plus | Registrarse</title>
 </head>
 <body>
     <header>
         <nav>    
-            <h2 class="logotipo ms-3 mt-3"> <a href="../index.html">Rolling plus</a></h2>
+            <h2 class="logotipo ms-3 mt-0"> <a href="../index.html">ROLLING PLUS</a></h2>
         </nav>
     </header>
 
     <div class="container">
-        <div class="row mt-5">
-            <div class="col-12 col-md-4 offset-md-4">
+        <div class="row">
+            <div class="col-12 col-md-4 ">
 
-                <form id="formulario" class="d-grid gap-2 text-white">
+                <form id="formularioRegistro" class="d-grid gap-2 text-white">
                     <label class="fw-bold">Nombre</label>
-                    <input type="text" class="form-control mb-3" id="nombre" maxlength="30" required/>
+                    <input type="text" class="form-control mb-3 bg-dark text-white" id="nombre" maxlength="30" required/>
 
                     <label class="fw-bold">Correo electrónico</label>
-                    <input type="email" class="form-control mb-3" id="email" maxlength="30" required/>
+                    <input type="email" class="form-control mb-3 bg-dark text-white" id="email" maxlength="30" required/>
 
                     <label class="fw-bold">Contraseña</label>
-                    <input type="password" class="form-control mb-3" id="password" maxlength="8" required/>
+                    <input type="password" class="form-control mb-3 bg-dark text-white" id="password" maxlength="8" required/>
 
                     <label class="fw-bold">Repetir contraseña</label>
-                    <input type="password" class="form-control mb-4" id="password2" maxlength="8" required/>
+                    <input type="password" class="form-control mb-4 bg-dark text-white" id="password2" maxlength="8" required/>
                     
-                    <button class="btn btn-success">
+                    <button class="btn btn-success rounded-pill">
                         Registrarme
-                    </button>
-                
+                    </button>             
                 </form>
             </div>
         </div>
