--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./css/estilos.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <link rel="shortcut icon" href="./img/loguito.png" type="image/x-icon" />
-
     <title>Rolling plus | Home</title>
 </head>
 <body>
@@ -31,6 +30,7 @@
   </header>
 
   <main>
+    
     <div class="pelicula-principal">
       <div class="contenedor">
         <h3 class="titulo">Interestellar</h3>
@@ -41,10 +41,10 @@
             inmensas distancias que tiene un viaje interestelar.
         </p>
         <button role="button" class="boton">
-          <i class="fas fa-play"></i>Reproducir
+          <i class="fas fa-play"></i> <a href="./pages/error404.html">Reproducir</a>
         </button>
         <button role="button" class="boton">
-          <i class="fas fa-info-circle"></i>Más información
+          <i class="fas fa-info-circle"></i><a href="#">Más información</a>
         </button>
       </div>
     </div>
