--- a/pages/login.html
+++ b/pages/login.html
@@ -34,7 +34,7 @@
                     <p>
                         Olvidaste tu contraseña? Haz click 
                         <b>
-                            <a href="/pages/error404.html" class=" text-white nuevaPassword">AQUI.</a>
+                            <a href="/pages/recuperarPass.html" class=" text-white nuevaPassword">AQUI.</a>
                         </b>
                     </p>
 
