--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2 class="logotipo">Rolling plus</h2>
         <nav>
           <a href="#" class="activo">Inicio</a>
-          <a href="#">Nosotros</a>
+          <a href="./nosotros.html">Nosotros</a>
           <a href="./pages/contacto.html">Contacto</a>
           <a href="./pages/login.html">Login</a>
           <a href="./pages/registrarse.html">Registro</a>
@@ -40,12 +40,9 @@
     <main>
       <div class="pelicula-principal">
         <div class="contenedor">
-          <h3 class="titulo">Interestellar</h3>
+          <h3 class="titulo">Jurassic World Dominion </h3>
           <p class="descripcion">
-            Narra las aventuras de un grupo de exploradores que hacen uso de un
-            agujero de gusano recientemente descubierto para superar las
-            limitaciones de los viajes espaciales tripulados y vencer las
-            inmensas distancias que tiene un viaje interestelar.
+            La isla Nublar y su parque han sido destruidos, pero el problema no se terminó. Con los dinosaurios dispersos por todo el mundo, la convivencia entre el presente y el pasado alcanza un nuevo nivel de tensión.
           </p>
           <button role="button" class="boton">
             <i class="fas fa-play"></i>Reproducir
@@ -56,177 +53,33 @@
         </div>
       </div>
 
-      <div class="peliculas-recomendadas contenedor">
-        <div class="contenedor-titulo-controles">
-          <h3>Películas recomendadas</h3>
-          <button></button>
-          <button></button>
+      
+
+          <div class="carrusel">
+            <div class="carrusel-items">
+              <div class="carrusel-item">
+                <img src="./img/af.jpg" alt="" />
+              </div>
+              <div class="carrusel-item">
+                <img src="./img/memory.jpg" alt="" />
+              </div>
+              <div class="carrusel-item">
+                <img src="./img/morbius.jpg" alt="" />
+              </div>
+              <div class="carrusel-item">
+                <img src="./img/per.jpg" alt="" />
+              </div>
+              <div class="carrusel-item">
+                <img src="./img/sonic.jpg" alt="" />
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="contenedor-principal">
-          <button role="button" id="flecha-izquierda" class="flecha-izquierda"> <i class="fa-solid fa-angle-left"></i>
-          </button>
-
- <div class="contenedor-carousel">
-
-  <div class="div-carousel">
-
-    <div class="pelicula">
-      <a href="#"> <img src="./img/recomend1.jpg" alt=""></a>
-    </div>
-    <div class="pelicula">
-      <a href="#"> <img src="./img/recomend2.jpg" alt=""></a>
-    </div> 
-    <div class="pelicula">
-      <a href="#"> <img src="./img/1.png" alt=""></a>
-    </div>
-    <div class="pelicula">
-      <a href="#"> <img src="./img/2.png" alt=""></a>
-    </div>
-    <div class="pelicula">
-      <a href="#"> <img src="./img/3.png" alt=""></a>
-    </div>
-    <div class="pelicula">
-      <a href="#"> <img src="./img/4.png" alt=""></a>
-    </div> 
-    <div class="pelicula">
-      <a href="#"> <img src="./img/5.png" alt=""></a>
-    </div>
 
 
 
-<button role="button" id="flecha-derecha" class="flecha-derecha"><i class="fa-solid fa-angle-right"></i>
-          </button>
-        </div>
-      </div>
 
-
-      <div class="peliculas-recomendadas contenedor">
-        <div class="contenedor-titulo-controles">
-          <h3> Fantasía</h3>
-          <button></button>
-          <button></button>
-        </div>
-        <div class="contenedor-principal">
-          <button role="button" id="flecha-izquierda" class="flecha-izquierda"> <i class="fa-solid fa-angle-left"></i>
-          </button>
-
- <div class="contenedor-carousel">
-
-  <div class="div-carousel">
-
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div>
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div> 
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div>
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div>
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div>
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div> 
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div>
-
-
-
-<button role="button" id="flecha-derecha" class="flecha-derecha"><i class="fa-solid fa-angle-right"></i>
-          </button>
-        </div>
-      </div>
-      <div class="peliculas-recomendadas contenedor">
-        <div class="contenedor-titulo-controles">
-          <h3> Acción</h3>
-          <button></button>
-          <button></button>
-        </div>
-        <div class="contenedor-principal">
-          <button role="button" id="flecha-izquierda" class="flecha-izquierda"> <i class="fa-solid fa-angle-left"></i>
-          </button>
-
- <div class="contenedor-carousel">
-
-  <div class="div-carousel">
-
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div>
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div> 
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div>
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div>
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div>
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div> 
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div>
-
-
-
-<button role="button" id="flecha-derecha" class="flecha-derecha"><i class="fa-solid fa-angle-right"></i>
-          </button>
-        </div>
-      </div>
-
-      <div class="peliculas-recomendadas contenedor">
-        <div class="contenedor-titulo-controles">
-          <h3>Romance</h3>
-          <button></button> <button></button>
-
-        </div>
-        <div class="contenedor-principal">
-          <button role="button" id="flecha-izquierda" class="flecha-izquierda"> <i class="fa-solid fa-angle-left"></i>
-          </button>
-
- <div class="contenedor-carousel">
-
-  <div class="div-carousel">
-
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div>
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div> 
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div>
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div>
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div>
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div> 
-    <div class="pelicula">
-      <a href="#"> <img src="" alt=""></a>
-    </div>
-
-
-
-<button role="button" id="flecha-derecha" class="flecha-derecha"><i class="fa-solid fa-angle-right"></i>
-          </button>
-        </div>
-      </div>
+     
 
 
 
