--- a/nosotros.html
+++ b/nosotros.html
@@ -99,6 +99,22 @@
                 </div>
               </div>
              
+              <!-- tarjeta4 -->
+              <div class="col-12 col-md mb-2">
+                <div class="card" style="width: 12rem">
+                  <img
+                    src="./img/ALIEN.webp"
+                    class="rounded mx-auto d-block rounded-circle"
+                    alt="img"
+                  />
+                  <div class="card-body text-center">
+                    <h5 class="card-title">Joaquín Cardalda</h5>
+                    <p class="card-text">
+                      Developer
+                    </p>
+                  </div>
+                </div>
+              </div>
                 </div>
               </div>
             </div>
