--- a/index.html
+++ b/index.html
@@ -19,21 +19,43 @@
   </head>
   <body>
     <header>
-      <div class="contenedor">
-        <h2 class="logotipo">Rolling plus</h2>
-        <nav>
-          <a href="#" class="activo">Inicio</a>
-          <a href="#">Nosotros</a>
-          <a href="./pages/contacto.html">Contacto</a>
-          <a href="./pages/login.html">Login</a>
-          <a href="./pages/registrarse.html">Registrarse</a>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container-fluid">
+          
+          <h2 class="logotipo">Rolling plus</h2>
+           <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse fix" id="navbarNavDropdown">
+            <ul class="navbar-nav w-100 d-flex justify-content-around" >
+              <li class="nav-item ">
+                <a class="nav-link text-white text-md-end" aria-current="page" href="#"> <i class=></i>Inicio</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link text-white text-md-end" aria-current="page" href="./nosotros.html"><i ></i>Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white text-md-end" href="./pages/contacto.html"><i ></i> Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white text-md-end" href="./pages/login.html"><i ></i>Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white text-md-end" href="./pages/registrarse.html"><i ></i>Registrarse</a>
+              </li>
 
-          <!-- <button class="btn btn-success btn-md">
-          <a href="./pages/login.html">Cerrar Sesion</a>
-        </button> -->
+              
+            </ul>
+          </div>                         
         </nav>
-      </div>
-    </header>
+      </header>
 
     <main>
       <div class="pelicula-principal">
