Actualizado todo el diseño paginas Login, contacto y Registro

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,17 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/nosotros.css">
     <link rel="shortcut icon" href="../img/loguito.png" type="image/x-icon">
-
-  
     
     <title>Rollin Plus | Acerca de nosotros</title>
 
   </head>
   <body>
+
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
@@ -32,26 +30,26 @@
           <div class="collapse navbar-collapse fix" id="navbarNavDropdown">
             <ul class="navbar-nav w-100 d-flex justify-content-around" >
               <li class="nav-item ">
-                <a class="nav-link text-white text-md-end" aria-current="page" href="./index.html"> <i class=></i>Inicio</a>
+                <a class="nav-link text-white text-md-end" aria-current="page" href="../index.html"> <i class=></i>Inicio</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link text-white text-md-end" aria-current="page" href="./nosotros.html"><i ></i>Nosotros</a>
+                <a class="nav-link text-white text-md-end" aria-current="page" href="#"><i></i>Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white text-md-end" href="./pages/contacto.html"><i ></i> Contacto</a>
+                <a class="nav-link text-white text-md-end" href="/pages/contacto.html"><i ></i> Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white text-md-end" href="./pages/login.html"><i ></i>Login</a>
+                <a class="nav-link text-white text-md-end" href="/pages/login.html"><i ></i>Login</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white text-md-end" href="./pages/registrarse.html"><i ></i>Registrarse</a>
-              </li>
-
-              
+                <a class="nav-link text-white text-md-end" href="/pages/registrarse.html"><i ></i>Registrarse</a>
+              </li>  
             </ul>
           </div>                         
-        </nav>
-      </header>
+        </div>                         
+      </nav>
+    </header>
+
     <main>
         <!--CONTENIDO PRINCIPAL-->
         <div class="container">
