--- a/index.html
+++ b/index.html
@@ -4,16 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&splay=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&splay=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/inicio.css" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/swiper/swiper-bundle.min.css"
-    />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <link rel="shortcut icon" href="./img/loguito.png" type="image/x-icon" />
     <title>Rolling plus | Home</title>
   </head>
@@ -23,7 +17,7 @@
         <div class="container-fluid">
           
           <h2 class="logotipo">Rolling plus</h2>
-           <button
+          <button
             class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
@@ -39,7 +33,7 @@
                 <a class="nav-link text-white text-md-end" aria-current="page" href="#"> <i class=></i>Inicio</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link text-white text-md-end" aria-current="page" href="./nosotros.html"><i ></i>Nosotros</a>
+                <a class="nav-link text-white text-md-end" aria-current="page" href="./pages/nosotros.html"><i ></i>Nosotros</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white text-md-end" href="./pages/contacto.html"><i ></i> Contacto</a>
@@ -133,52 +127,6 @@
         </div>
       </section>
 
-<<<<<<< HEAD
-
-
-    <!-- CATEGORIA 3 -->
-    <!-- <div class="peliculas-recomendadas contenedor">
-      <div class="contenedor-titulo-controles">
-        <h3>Romance</h3>
-      </div>
-
-      <div class="contenedor-principal">
-        <div class="contenedor-carousel">
-          <button role="button" id="flecha-izquierda" class="flecha-izquierda"> <i class="fa-solid fa-angle-left"></i></button>
-          <div class="div-carousel">
-            <div class="pelicula">
-              <a href="#"> <img src="" alt=""></a>
-            </div>
-            <div class="pelicula">
-              <a href="#"> <img src="" alt=""></a>
-            </div> 
-            <div class="pelicula">
-              <a href="#"> <img src="" alt=""></a>
-            </div>
-            <div class="pelicula">
-              <a href="#"> <img src="" alt=""></a>
-            </div>
-            <div class="pelicula">
-              <a href="#"> <img src="" alt=""></a>
-            </div>
-            <div class="pelicula">
-              <a href="#"> <img src="" alt=""></a>
-            </div> 
-            <div class="pelicula">
-              <a href="#"> <img src="" alt=""></a>
-            </div>
-          </div> 
-          <button role="button" id="flecha-derecha" class="flecha-derecha"><i class="fa-solid fa-angle-right"></i></button>
-        </div>
-      </div>
-    </div> -->
-
-  </main>
-  <script src="./js/bootstrap.bundle.min.js"></script>
-  <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
-  <script src="./js/index.js"></script>
-</body>
-=======
       <section>
         <div class="container">
           <div id="" class="peliculas-recomendadas row mt-5">
@@ -350,6 +298,7 @@
         </div>
       </section>
     </main>
+    
     <footer class="bg-dark text-light">
       <div class="container pt-3">
         <div class="row px-3 text-center">
@@ -388,5 +337,4 @@
     ></script>
     <script src="./js/inicio.js"></script>
   </body>
->>>>>>> 69e8852b646f9b24b2c7b9d4ac682efaafb7c153
 </html>
