--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
             tensión.
           </p>
           <button role="button" class="boton">
-            <i class="fas fa-play"></i>Reproducir
+            <a href="./pages/error404.html"> <i class="fas fa-play">
+            </i>Reproducir
+          </a>
+              
           </button>
           <button role="button" class="boton">
             <i class="fas fa-info-circle"></i>Más información
@@ -98,7 +101,7 @@
                     <a href="#"><img src="./img/accion3.jpg" alt="" /></a>
                   </div>
                   <div class="pelicula">
-                    <a href="#"><img src="./img/accion4.jpg" alt="" /></a>
+                    <a href="./pages/pelicula.html"><img src="./img/accion4.jpg" alt="" /></a>
                   </div>
                   <div class="pelicula">
                     <a href="#"><img src="./img/drama1.jpg" alt="" /></a>
@@ -135,56 +138,56 @@
 
       <section>
         <div class="container">
-          <div id="" class="peliculas-recomendadas row mt-5">
-            <div class="contenedor-controles">
+          <div id="" class="peliculas-recomendadas-2 row mt-5">
+            <div class="contenedor-controles-2">
               <h3>Series</h3>
               <div class="indicadores"></div>
             </div>
-            <div class="contenedor-principal">
-              <button role="button" id="" class="flecha-izquierda">◀</button>
+            <div class="contenedor-principal-2">
+              <button role="button" id="" class="flecha-izquierda-2">◀</button>
 
-              <div class="contenedor-carousel">
-                <div class="carousel">
-                  <div class="pelicula">
+              <div class="contenedor-carousel-2">
+                <div class="carousel-2">
+                  <div class="pelicula-2">
                     <a href="#"><img src="./img/serie.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-2">
                     <a href="#"><img src="./img/serie2.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-2">
                     <a href="#"><img src="./img/serie3.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-2">
                     <a href="#"><img src="./img/serie4.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-2">
                     <a href="#"><img src="./img/serie6.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-2">
                     <a href="#"><img src="./img/serie5.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-2">
                     <a href="#"><img src="./img/serie7.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-2">
                     <a href="#"><img src="./img/serie8.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-2">
                     <a href="#"><img src="./img/serie9.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-2">
                     <a href="#"><img src="./img/serie10.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-2">
                     <a href="#"><img src="./img/serie11.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-2">
                     <a href="#"><img src="./img/serie12.jpg" alt="" /></a>
                   </div>
                 </div>
               </div>
 
-              <button type="button" id="" class="flecha-derecha">▶</button>
+              <button type="button" id="" class="flecha-derecha-2">▶</button>
             </div>
           </div>
         </div>
@@ -192,56 +195,56 @@
 
       <section>
         <div class="container">
-          <div id="" class="peliculas-recomendadas row mt-5">
-            <div class="contenedor-controles">
+          <div id="" class="peliculas-recomendadas-3 row mt-5">
+            <div class="contenedor-controles-3">
               <h3>Anime</h3>
-              <div class="indicadores"></div>
+              <div class="indicadores-3"></div>
             </div>
-            <div class="contenedor-principal">
-              <button role="button" id="" class="flecha-izquierda">◀</button>
+            <div class="contenedor-principal-3">
+              <button role="button" id="" class="flecha-izquierda-3">◀</button>
 
-              <div class="contenedor-carousel">
-                <div class="carousel">
-                  <div class="pelicula">
+              <div class="contenedor-carousel-3">
+                <div class="carousel-3">
+                  <div class="pelicula-3">
                     <a href="#"><img src="./img/anime1.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-3">
                     <a href="#"><img src="./img/anime2.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-3">
                     <a href="#"><img src="./img/anime3.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-3">
                     <a href="#"><img src="./img/anime4.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-3">
                     <a href="#"><img src="./img/anime5.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-3">
                     <a href="#"><img src="./img/anime6.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-3">
                     <a href="#"><img src="./img/anime7.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-3">
                     <a href="#"><img src="./img/anime8.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-3">
                     <a href="#"><img src="./img/anime9.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-3">
                     <a href="#"><img src="./img/anime10.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-3">
                     <a href="#"><img src="./img/anime11.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-3">
                     <a href="#"><img src="./img/anime12...jpg" alt="" /></a>
                   </div>
                 </div>
               </div>
 
-              <button type="button" id="" class="flecha-derecha">▶</button>
+              <button type="button" id="" class="flecha-derecha-3">▶</button>
             </div>
           </div>
         </div>
@@ -249,56 +252,56 @@
 
       <section>
         <div class="container">
-          <div id="" class="peliculas-recomendadas row mt-5">
-            <div class="contenedor-controles">
+          <div id="" class="peliculas-recomendadas-4 row mt-5">
+            <div class="contenedor-controles-4">
               <h3>Próximamente</h3>
-              <div class="indicadores"></div>
+              <div class="indicadores-4"></div>
             </div>
-            <div class="contenedor-principal">
-              <button role="button" id="" class="flecha-izquierda">◀</button>
+            <div class="contenedor-principal-4">
+              <button role="button" id="" class="flecha-izquierda-4">◀</button>
 
-              <div class="contenedor-carousel">
-                <div class="carousel">
-                  <div class="pelicula">
+              <div class="contenedor-carousel-4">
+                <div class="carousel-4">
+                  <div class="pelicula-4">
                     <a href="#"><img src="./img/pr.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-4">
                     <a href="#"><img src="./img/pr2.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-4">
                     <a href="#"><img src="./img/pr3.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-4">
                     <a href="#"><img src="./img/pr4.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-4">
                     <a href="#"><img src="./img/pr5.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-4">
                     <a href="#"><img src="./img/pr6.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-4">
                     <a href="#"><img src="./img/pr7.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-4">
                     <a href="#"><img src="./img/pr8.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-4">
                     <a href="#"><img src="./img/anime9.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-4">
                     <a href="#"><img src="./img/pr10.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-4">
                     <a href="#"><img src="./img/pr11.jpg" alt="" /></a>
                   </div>
-                  <div class="pelicula">
+                  <div class="pelicula-4">
                     <a href="#"><img src="./img/pr12.jpg" alt="" /></a>
                   </div>
                 </div>
               </div>
 
-              <button type="button" id="" class="flecha-derecha">▶</button>
+              <button type="button" id="" class="flecha-derecha-4">▶</button>
             </div>
           </div>
         </div>
@@ -307,6 +310,7 @@
     <footer class="bg-dark text-light">
       <div class="container pt-3">
         <div class="row px-3 text-center">
+          <div class="col"><span> Todos los derechos reservados</span></div>
           <div class="col"><span> Rolling Plus</span></div>
           <div class="col"><span>Aviso Legal</span></div>
           <div class="col"><span>Privacidad</span></div>
