--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -1,52 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&splay=swap"
-    rel="stylesheet"/>
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/estilosLogin.css">
-    <link rel="shortcut icon" href="../img/loguito.png" type="image/x-icon">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&splay=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/estilosLogin.css" />
+    <link rel="shortcut icon" href="../img/loguito.png" type="image/x-icon" />
 
     <title>Rolling Plus | Registrarse</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>    
-            <h2 class="logotipo ms-3 mt-0"> <a href="../index.html">ROLLING PLUS</a></h2>
-        </nav>
+      <nav>
+        <h2 class="logotipo ms-3 mt-0">
+          <a href="../index.html">ROLLING PLUS</a>
+        </h2>
+      </nav>
     </header>
-
-    <div class="container">
+    <main>
+      <div class="container">
         <div class="row">
-            <div class="col-12 col-md-4 ">
+          <div class="col-12 col-md-4">
+            <form id="formularioRegistro" class="d-grid gap-2 text-white">
+              <label class="fw-bold">Nombre</label>
+              <input
+                type="text"
+                class="form-control mb-3 bg-dark text-white"
+                id="nombre"
+                maxlength="30"
+                required
+              />
 
-                <form id="formularioRegistro" class="d-grid gap-2 text-white">
-                    <label class="fw-bold">Nombre</label>
-                    <input type="text" class="form-control mb-3 bg-dark text-white" id="nombre" maxlength="30" required/>
+              <label class="fw-bold">Correo electrónico</label>
+              <input
+                type="email"
+                class="form-control mb-3 bg-dark text-white"
+                id="email"
+                maxlength="30"
+                required
+              />
 
-                    <label class="fw-bold">Correo electrónico</label>
-                    <input type="email" class="form-control mb-3 bg-dark text-white" id="email" maxlength="30" required/>
+              <label class="fw-bold">Contraseña</label>
+              <input
+                type="password"
+                class="form-control mb-3 bg-dark text-white"
+                id="password"
+                maxlength="8"
+                required
+              />
 
-                    <label class="fw-bold">Contraseña</label>
-                    <input type="password" class="form-control mb-3 bg-dark text-white" id="password" maxlength="8" required/>
+              <label class="fw-bold">Repetir contraseña</label>
+              <input
+                type="password"
+                class="form-control mb-4 bg-dark text-white"
+                id="password2"
+                maxlength="8"
+                required
+              />
 
-                    <label class="fw-bold">Repetir contraseña</label>
-                    <input type="password" class="form-control mb-4 bg-dark text-white" id="password2" maxlength="8" required/>
-                    
-                    <button class="btn btn-success rounded-pill">
-                        Registrarme
-                    </button>             
-                </form>
-            </div>
+              <button class="btn btn-success rounded-pill">Registrarme</button>
+            </form>
+          </div>
         </div>
-    </div>
-
+      </div>
+    </main>
 
     <script src="../js/bootstrap.bundle.min.js"></script>
     <script src="../js/registrarse.js"></script>
-</body>
+  </body>
 </html>
