Admin terminado, falta integrar

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -16,14 +16,20 @@
 <body>
     <header>
         <nav>    
-            <h2 class="logotipo ms-3 mt-0"> <a href="../index.html">ROLLING PLUS</a></h2>
+            <h2 class="logotipo ml-4 ms-4 mt-3"> <a href="../index.html">ROLLING PLUS</a></h2>
         </nav>
     </header>
+    
+    
 
     <div class="container">
         <div class="row m-4">
             <div class="col-12">
-                <table class="table">
+                <div class="textos mb-3">
+                    <h4 class="text-white">¡Bienvenido, <span class="saludo"></span>!</h4>
+                    <h4 class="text-white ">Administración</h4>
+                </div>
+                <table class="table text-white">
                     <thead>
                         <tr>
                             <th class="scope">#</th>
