admin al dia de presentacion de trabajo

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -112,7 +112,7 @@
               <div class="col-12 col-md mb-2">
                 <div class="card" style="width: 12rem">
                   <img
-                    src="../img/ALIEN.webp"
+                    src="../img/unnamed.jpg"
                     class="rounded mx-auto d-block rounded-circle"
                     alt="img"
                   />
