Separacion por categorias en admin

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/admin.css">
     <link rel="shortcut icon" href="../img/loguito.png" type="image/x-icon">
     
-    <title>Rolling Plus | Admin</title>
+    <title>Administración | Rolling Plus</title>
 </head>
 <body>
     <header>
@@ -25,6 +25,7 @@
     <div class="container">
         <div class="row m-4">
             <div class="col-12">
+                <div><a href="../index.html" id="botonAtras"></a></div>
                 <div class="textos mb-3">
                     <h4 class="text-white">¡Bienvenido, <span class="saludo"></span>!</h4>
                     <h4 class="text-white ">Administración</h4>
@@ -36,6 +37,7 @@
                             <th class="scope">Título</th>
                             <th class="scope">Descripcion</th>
                             <th class="scope">Imagen</th>
+                            <th class="scope">Categoría</th>
                             <th class="scope">Acciones</th>
                         </tr>
                     </thead>
