--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,7 +43,7 @@
                   <a class="nav-link text-white text-md-end" href="./pages/contacto.html"><i ></i> Contacto</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white text-md-end" href="./pages/login.html"><i ></i>Login</a>
+                  <a class="nav-link text-white text-md-end" href="./login.html"><i ></i>Login</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white text-md-end" href="../pages/registrarse.html"><i ></i>Registrarse</a>
