Actualizacion y commit antes del pull

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="container">
           <div id="" class="peliculas-recomendadas row mt-5">
             <div class="contenedor-controles">
-              <h3>Recomendado para ti</h3>
+              <h3 class="text-white">Recomendado para ti</h3>
               <div class="indicadores"></div>
             </div>
             <div class="contenedor-principal">
@@ -85,42 +85,7 @@
 
               <div class="contenedor-carousel">
                 <div class="carousel">
-                  <div class="pelicula">
-                    <a href="#"><img src="./img/accion.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula">
-                    <a href="#"><img src="./img/accion2.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula">
-                    <a href="#"><img src="./img/accion3.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula">
-                    <a href="./pages/pelicula.html"><img src="./img/accion4.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula">
-                    <a href="#"><img src="./img/drama1.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula">
-                    <a href="#"><img src="./img/drama2.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula">
-                    <a href="#"><img src="./img/accion3.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula">
-                    <a href="#"><img src="./img/drama4.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula">
-                    <a href="#"><img src="./img/romance1.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula">
-                    <a href="#"><img src="./img/romance2.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula">
-                    <a href="#"><img src="./img/romance3.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula">
-                    <a href="#"><img src="./img/romance4.jpg" alt="" /></a>
-                  </div>
+                  
                 </div>
               </div>
 
@@ -134,7 +99,7 @@
         <div class="container">
           <div id="" class="peliculas-recomendadas-2 row mt-5">
             <div class="contenedor-controles-2">
-              <h3>Series</h3>
+              <h3 class="text-white">Series</h3>
               <div class="indicadores"></div>
             </div>
             <div class="contenedor-principal-2">
@@ -142,42 +107,7 @@
 
               <div class="contenedor-carousel-2">
                 <div class="carousel-2">
-                  <div class="pelicula-2">
-                    <a href="#"><img src="./img/serie.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula-2">
-                    <a href="#"><img src="./img/serie2.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula-2">
-                    <a href="#"><img src="./img/serie3.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula-2">
-                    <a href="#"><img src="./img/serie4.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula-2">
-                    <a href="#"><img src="./img/serie6.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula-2">
-                    <a href="#"><img src="./img/serie5.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula-2">
-                    <a href="#"><img src="./img/serie7.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula-2">
-                    <a href="#"><img src="./img/serie8.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula-2">
-                    <a href="#"><img src="./img/serie9.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula-2">
-                    <a href="#"><img src="./img/serie10.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula-2">
-                    <a href="#"><img src="./img/serie11.jpg" alt="" /></a>
-                  </div>
-                  <div class="pelicula-2">
-                    <a href="#"><img src="./img/serie12.jpg" alt="" /></a>
-                  </div>
+                  
                 </div>
               </div>
 
@@ -191,7 +121,7 @@
         <div class="container">
           <div id="" class="peliculas-recomendadas-3 row mt-5">
             <div class="contenedor-controles-3">
-              <h3>Anime</h3>
+              <h3 class="text-white">Anime</h3>
               <div class="indicadores-3"></div>
             </div>
             <div class="contenedor-principal-3">
@@ -248,7 +178,7 @@
         <div class="container">
           <div id="" class="peliculas-recomendadas-4 row mt-5">
             <div class="contenedor-controles-4">
-              <h3>Próximamente</h3>
+              <h3 class="text-white">Próximamente</h3>
               <div class="indicadores-4"></div>
             </div>
             <div class="contenedor-principal-4">
