--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -63,6 +63,13 @@
                 maxlength="8"
                 required
               />
+ 
+              <div class="form-check" id="checkbox">
+                <input class="form-check-input" type="checkbox" id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">
+                  Admin
+                </label>
+              </div>
 
               <button class="btn btn-success rounded-pill">Registrarme</button>
             </form>
