Arreglos antes de subir la pagina

--- a/pages/error404.html
+++ b/pages/error404.html
@@ -20,6 +20,7 @@
 
 <body>
     <div class="bg-image"></div>
-    <!-- <script src="../js/error404.js"></script> -->
+    Error 404! :( Redireccionando...
+    <script src="../js/error404.js"></script>
 </body>
 </html>
