--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
           <div class="container-fluid">
             
-            <h2 class="logotipo">Rolling plus</h2>
+            <a href="../index.html"><h2 class="logotipo">Rolling plus</h2></a>
              <button
               class="navbar-toggler"
               type="button"
@@ -37,16 +37,16 @@
                   <a class="nav-link text-white text-md-end" aria-current="page" href="../index.html"> <i class=></i>Inicio</a>
                 </li>
                 <li class="nav-item ">
-                  <a class="nav-link text-white text-md-end" aria-current="page" href="../nosotros.html"><i ></i>Nosotros</a>
+                  <a class="nav-link text-white text-md-end" aria-current="page" href="./nosotros.html"><i ></i>Nosotros</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white text-md-end" href="./pages/contacto.html"><i ></i> Contacto</a>
+                  <a class="nav-link text-white text-md-end" href="./contacto.html"><i ></i> Contacto</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white text-md-end" href="./login.html"><i ></i>Login</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white text-md-end" href="../pages/registrarse.html"><i ></i>Registrarse</a>
+                  <a class="nav-link text-white text-md-end" href="./registrarse.html"><i ></i>Registrarse</a>
                 </li>
   
                 
